--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,14 +60,10 @@
             android:label="@string/title_activity_hazme_el_paro"
             android:windowSoftInputMode="stateHidden" >
         </activity>
-        <activity android:name="com.facebook.FacebookActivity"
-            android:configChanges=
-                "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"
-            android:label="@string/app_name" />
-        <provider android:authorities="com.facebook.app.FacebookContentProvider1505094703080117"
-            android:name="com.facebook.FacebookContentProvider"
-            android:exported="true"/>
+        <activity
+            android:name="com.facebook.LoginActivity"
+            android:label="@string/app_name" >
+        </activity>
         <activity
             android:name="com.citydevs.hazmeelparo.facebook.FacebookLoginActivity"
             android:label="@string/title_activity_hazme_el_paro" >
