--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,12 +43,14 @@
         <activity
             android:name=".InstructionsActivity"
             android:label="@string/app_name"
-            android:windowSoftInputMode="stateHidden" >
+            android:windowSoftInputMode="stateHidden"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name=".HazmeElParoActivity"
             android:label="@string/app_name"
-            android:windowSoftInputMode="stateHidden" >
+            android:windowSoftInputMode="stateHidden"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -59,15 +61,18 @@
         <activity
             android:name="com.citydevs.hazmeelparo.splash.SplashActivity"
             android:label="@string/title_activity_hazme_el_paro"
-            android:windowSoftInputMode="stateHidden" >
+            android:windowSoftInputMode="stateHidden"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name="com.facebook.LoginActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name="com.citydevs.hazmeelparo.facebook.FacebookLoginActivity"
-            android:label="@string/title_activity_hazme_el_paro" >
+            android:label="@string/title_activity_hazme_el_paro"
+            android:screenOrientation="portrait">
         </activity>
         <receiver
             android:name="com.citydevs.hazmeelparo.gcm.GcmBroadcastReceiver"
