--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <permission android:name="com.citydevs.hazmeelparo.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
@@ -82,8 +83,8 @@
                 <category android:name="com.citydevs.hazmeelparo" />
             </intent-filter>
         </receiver>
-
         <service android:name="com.citydevs.hazmeelparo.gcm.GcmIntentService" />
+        <service android:name="com.citydevs.hazmeelparo.localizacion.ServicioLocalizacion" />
     </application>
 
 </manifest>
